# Training-SoftUni

./: .gitignore  LICENSE  README.md
AI Agents and Workflows for Developers/: README.md  docker-compose.yml
AI Agents and Workflows for Developers/Workshop - Code Reviewer/: .gitignore  cli.py  config.py  git_helper.py  github_helper.py  workflow.py
AI Integrations for Developers/: README.md
AI Integrations for Developers/Exam Preparation/: Project.ipynb
AI Integrations for Developers/Workshop - Local AI/: Docker.ipynb  LM Studio.ipynb  README.md  requirements.txt
AI-Assisted Development/: README.md
AI-Assisted Development/agents/: research-abstract-and-keywords-writer.md
AI-Assisted Development/prompts/: generate-dotnet-documentation.md
C# Advanced/: C# Advanced.sln
C# Advanced/Defining Classes/: Defining Classes.sln
C# Advanced/Exam 2022-12-14/: Exam 2022-12-14.sln
C# Advanced/Exam 2024-02-17/: Exam 2024-02-17.sln
C# Advanced/Exam 2024-04-10/: Exam 2024-04-10.sln
C# Advanced/Exam 2024-08-12/: Exam 2024-08-12.sln
C# Advanced/Functional Programming/: Functional Programming.sln
C# Advanced/Generics/: Generics.sln
C# Advanced/Iterators and Comparators/: Iterators and Comparators.sln
C# Advanced/Multidimensional Arrays/: Multidimensional Arrays.sln
C# OOP/Design Patterns/: Design Patterns.sln
C++ Fundamentals/Demo - File Streams/: CMakeLists.txt  calculate_hash.cpp  read_binary_content.cpp  read_content.cpp  split_file.cpp  write_content.cpp
C++ Fundamentals/Demo - File Streams/files/: sample-text.txt
Spring Data/: docker-compose.yml
(+2025 files in other folders)
